
syntax = "proto3";
package pain.proto;
import "pain/proto/common.proto";

option cc_generic_services = true;

message AppendRequest {}

message AppendResponse {
    Header header = 1;
    uint64 offset = 2;
}

message ReadRequest {
    uint64 offset = 1;
    uint32 length = 2;
}

message ReadResponse {
    Header header = 1;
}

service FileService {
    rpc Append(AppendRequest) returns (AppendResponse);
    rpc Read(ReadRequest) returns (ReadResponse);
}
